# mazest

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: app.rs  generators.rs  lib.rs  main.rs  maze.rs
src/app/: game.rs  history.rs  mod.rs  renderer.rs
src/app/game/: game_settings.rs  game_state.rs  mod.rs
src/app/visualize/: history.rs  mod.rs  renderer.rs
src/generators/: dfs.rs  kruskal.rs  mod.rs  prim.rs  recur_backtrack.rs  recur_div.rs
src/maze/: cell.rs  grid.rs  mod.rs
src/solvers/: astar.rs  bfs.rs  dfs.rs  dijkstra.rs  mod.rs
