[package]
name = "mazest"
version = "0.1.0"
edition = "2024"
default-run = "mazest"
repository = "https://github.com/hunglongtrangithub/mazest.git"

[profile.release]
debug = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
rand = "0.9.2"
crossterm = "0.29.0"
rand_set = "0.1.2"
unicode-width = "0.2.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-appender = "0.2.3"
